<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_light"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shrinkColumns="1">

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/brush" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brush_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rectangle_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/roundrect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rrectangle_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/circle"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circle_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/eraser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eraser_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/newfile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/undo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/undo_info"
                    android:textSize="12sp"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_info"
                    android:textSize="12sp"
                    android:paddingRight="1dp"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Images from openclipart.org"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="10dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Close"
            android:id="@+id/btnCloseInfo"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>